fix text overlap issue on project page

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -39,7 +39,7 @@ td.aspect {
 }
 
 table.infotable {
-	width: 650px;
+	width: 485px;
 	margin-bottom: 40px;
 }
 
